# geany

./: .gitignore  .gitmodules  Makefile.am  configure.ac  geany.pc.in  merge_branches_to_master.sh  merge_branches_to_testing.sh  save_diff_as_fix_for_testing.sh  snapshot.sh
data/: filetype_extensions.conf  geany.glade
data/templates/files/: main.c
doc/: geany.1.in  geany.txt
lexilla-build/: Makefile.am  Makefile.am.generate  Makefile.am.template
lexilla-build/include/: Makefile.am
m4/: geany-docutils.m4  geany-revision-date.m4  geany-revision.m4
merge_branches_to_master/: open_files_recursively.fix
merge_branches_to_testing/: close_recursively.fix  default_filenames.fix  default_new_file_dir.fix  default_new_file_dir_v2.fix  docs_clone.fix  docs_delete.fix  docs_new.fix  docs_new_v2.fix  docs_reload_multi.fix  docs_rename.fix  file_delete.fix  file_reload_all.fix  file_rename.fix  open_files_recursively_x_docs_open.fix  renaming.fix  rework_save_as.fix  save_and_remove_orig.fix
plugins/: Makefile.am  export.c
po/: ar.po  ast.po  be.po  bg.po  ca.po  cs.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  kk.po  ko.po  lb.po  lt.po  mn.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  (+3 more)
scintilla-build/: Makefile.am  Makefile.am.generate  Makefile.am.template  ScintillaGTKWithSymbols.cxx.patch
scintilla-build/include/: Makefile.am
src/: Makefile.am  about.c  about.h  app.h  build.c  build.h  callbacks.c  callbacks.h  consider.c  consider.h  dialogs.c  dialogs.h  document.c  document.h  documentprivate.h  editor.c  editor.h  encodings.c  encodings.h  filetypes.c  filetypes.h  filetypesprivate.h  gb.c  geany.h  geanyentryaction.c  geanyentryaction.h  geanymenubuttonaction.c  geanymenubuttonaction.h  geanyobject.c  geanyobject.h  geanywraplabel.c  geanywraplabel.h  gtkcompat.h  highlighting.c  highlighting.h  highlightingmappings.h  keybindings.c  keybindings.h  keyfile.c  keyfile.h  (+56 more)
src/tagmanager/: tm_ctags_wrappers.c  tm_ctags_wrappers.h  tm_parser.c  tm_parser.h  tm_source_file.c  tm_source_file.h  tm_tag.c  tm_tag.h  tm_workspace.c  tm_workspace.h
tagmanager/ctags/: sh.c
