SUBDIRS = include
LEXILLA = $(top_srcdir)/lexilla

noinst_LTLIBRARIES = liblexilla.la

AM_CXXFLAGS = -DNDEBUG -DGTK -DSCI_LEXER -DNO_CXX11_REGEX

SRCS = \
	$(LEXILLA)/lexers/LexA68k.cxx \
	$(LEXILLA)/lexers/LexAPDL.cxx \
	$(LEXILLA)/lexers/LexASY.cxx \
	$(LEXILLA)/lexers/LexAU3.cxx \
	$(LEXILLA)/lexers/LexAVE.cxx \
	$(LEXILLA)/lexers/LexAVS.cxx \
	$(LEXILLA)/lexers/LexAbaqus.cxx \
	$(LEXILLA)/lexers/LexAda.cxx \
	$(LEXILLA)/lexers/LexAsciidoc.cxx \
	$(LEXILLA)/lexers/LexAsm.cxx \
	$(LEXILLA)/lexers/LexAsn1.cxx \
	$(LEXILLA)/lexers/LexBaan.cxx \
	$(LEXILLA)/lexers/LexBash.cxx \
	$(LEXILLA)/lexers/LexBasic.cxx \
	$(LEXILLA)/lexers/LexBatch.cxx \
	$(LEXILLA)/lexers/LexBibTeX.cxx \
	$(LEXILLA)/lexers/LexBullant.cxx \
	$(LEXILLA)/lexers/LexCIL.cxx \
	$(LEXILLA)/lexers/LexCLW.cxx \
	$(LEXILLA)/lexers/LexCOBOL.cxx \
	$(LEXILLA)/lexers/LexCPP.cxx \
	$(LEXILLA)/lexers/LexCSS.cxx \
	$(LEXILLA)/lexers/LexCaml.cxx \
	$(LEXILLA)/lexers/LexCmake.cxx \
	$(LEXILLA)/lexers/LexCoffeeScript.cxx \
	$(LEXILLA)/lexers/LexConf.cxx \
	$(LEXILLA)/lexers/LexCrontab.cxx \
	$(LEXILLA)/lexers/LexCsound.cxx \
	$(LEXILLA)/lexers/LexD.cxx \
	$(LEXILLA)/lexers/LexDMAP.cxx \
	$(LEXILLA)/lexers/LexDMIS.cxx \
	$(LEXILLA)/lexers/LexDataflex.cxx \
	$(LEXILLA)/lexers/LexDiff.cxx \
	$(LEXILLA)/lexers/LexECL.cxx \
	$(LEXILLA)/lexers/LexEDIFACT.cxx \
	$(LEXILLA)/lexers/LexEScript.cxx \
	$(LEXILLA)/lexers/LexEiffel.cxx \
	$(LEXILLA)/lexers/LexErlang.cxx \
	$(LEXILLA)/lexers/LexErrorList.cxx \
	$(LEXILLA)/lexers/LexFSharp.cxx \
	$(LEXILLA)/lexers/LexFlagship.cxx \
	$(LEXILLA)/lexers/LexForth.cxx \
	$(LEXILLA)/lexers/LexFortran.cxx \
	$(LEXILLA)/lexers/LexGAP.cxx \
	$(LEXILLA)/lexers/LexGDScript.cxx \
	$(LEXILLA)/lexers/LexGui4Cli.cxx \
	$(LEXILLA)/lexers/LexHTML.cxx \
	$(LEXILLA)/lexers/LexHaskell.cxx \
	$(LEXILLA)/lexers/LexHex.cxx \
	$(LEXILLA)/lexers/LexHollywood.cxx \
	$(LEXILLA)/lexers/LexIndent.cxx \
	$(LEXILLA)/lexers/LexInno.cxx \
	$(LEXILLA)/lexers/LexJSON.cxx \
	$(LEXILLA)/lexers/LexJulia.cxx \
	$(LEXILLA)/lexers/LexKVIrc.cxx \
	$(LEXILLA)/lexers/LexKix.cxx \
	$(LEXILLA)/lexers/LexLaTeX.cxx \
	$(LEXILLA)/lexers/LexLisp.cxx \
	$(LEXILLA)/lexers/LexLout.cxx \
	$(LEXILLA)/lexers/LexLua.cxx \
	$(LEXILLA)/lexers/LexMMIXAL.cxx \
	$(LEXILLA)/lexers/LexMPT.cxx \
	$(LEXILLA)/lexers/LexMSSQL.cxx \
	$(LEXILLA)/lexers/LexMagik.cxx \
	$(LEXILLA)/lexers/LexMake.cxx \
	$(LEXILLA)/lexers/LexMarkdown.cxx \
	$(LEXILLA)/lexers/LexMatlab.cxx \
	$(LEXILLA)/lexers/LexMaxima.cxx \
	$(LEXILLA)/lexers/LexMetapost.cxx \
	$(LEXILLA)/lexers/LexModula.cxx \
	$(LEXILLA)/lexers/LexMySQL.cxx \
	$(LEXILLA)/lexers/LexNim.cxx \
	$(LEXILLA)/lexers/LexNimrod.cxx \
	$(LEXILLA)/lexers/LexNsis.cxx \
	$(LEXILLA)/lexers/LexNull.cxx \
	$(LEXILLA)/lexers/LexOScript.cxx \
	$(LEXILLA)/lexers/LexOpal.cxx \
	$(LEXILLA)/lexers/LexPB.cxx \
	$(LEXILLA)/lexers/LexPLM.cxx \
	$(LEXILLA)/lexers/LexPO.cxx \
	$(LEXILLA)/lexers/LexPOV.cxx \
	$(LEXILLA)/lexers/LexPS.cxx \
	$(LEXILLA)/lexers/LexPascal.cxx \
	$(LEXILLA)/lexers/LexPerl.cxx \
	$(LEXILLA)/lexers/LexPowerPro.cxx \
	$(LEXILLA)/lexers/LexPowerShell.cxx \
	$(LEXILLA)/lexers/LexProgress.cxx \
	$(LEXILLA)/lexers/LexProps.cxx \
	$(LEXILLA)/lexers/LexPython.cxx \
	$(LEXILLA)/lexers/LexR.cxx \
	$(LEXILLA)/lexers/LexRaku.cxx \
	$(LEXILLA)/lexers/LexRebol.cxx \
	$(LEXILLA)/lexers/LexRegistry.cxx \
	$(LEXILLA)/lexers/LexRuby.cxx \
	$(LEXILLA)/lexers/LexRust.cxx \
	$(LEXILLA)/lexers/LexSAS.cxx \
	$(LEXILLA)/lexers/LexSML.cxx \
	$(LEXILLA)/lexers/LexSQL.cxx \
	$(LEXILLA)/lexers/LexSTTXT.cxx \
	$(LEXILLA)/lexers/LexScriptol.cxx \
	$(LEXILLA)/lexers/LexSmalltalk.cxx \
	$(LEXILLA)/lexers/LexSorcus.cxx \
	$(LEXILLA)/lexers/LexSpecman.cxx \
	$(LEXILLA)/lexers/LexSpice.cxx \
	$(LEXILLA)/lexers/LexStata.cxx \
	$(LEXILLA)/lexers/LexTACL.cxx \
	$(LEXILLA)/lexers/LexTADS3.cxx \
	$(LEXILLA)/lexers/LexTAL.cxx \
	$(LEXILLA)/lexers/LexTCL.cxx \
	$(LEXILLA)/lexers/LexTCMD.cxx \
	$(LEXILLA)/lexers/LexTeX.cxx \
	$(LEXILLA)/lexers/LexTxt2tags.cxx \
	$(LEXILLA)/lexers/LexVB.cxx \
	$(LEXILLA)/lexers/LexVHDL.cxx \
	$(LEXILLA)/lexers/LexVerilog.cxx \
	$(LEXILLA)/lexers/LexVisualProlog.cxx \
	$(LEXILLA)/lexers/LexX12.cxx \
	$(LEXILLA)/lexers/LexYAML.cxx \
	$(LEXILLA)/lexlib/Accessor.h \
	$(LEXILLA)/lexlib/CatalogueModules.h \
	$(LEXILLA)/lexlib/CharacterCategory.h \
	$(LEXILLA)/lexlib/CharacterSet.h \
	$(LEXILLA)/lexlib/DefaultLexer.h \
	$(LEXILLA)/lexlib/InList.h \
	$(LEXILLA)/lexlib/LexAccessor.h \
	$(LEXILLA)/lexlib/LexerBase.h \
	$(LEXILLA)/lexlib/LexerModule.h \
	$(LEXILLA)/lexlib/LexerNoExceptions.h \
	$(LEXILLA)/lexlib/LexerSimple.h \
	$(LEXILLA)/lexlib/OptionSet.h \
	$(LEXILLA)/lexlib/PropSetSimple.h \
	$(LEXILLA)/lexlib/SparseState.h \
	$(LEXILLA)/lexlib/StringCopy.h \
	$(LEXILLA)/lexlib/StyleContext.h \
	$(LEXILLA)/lexlib/SubStyles.h \
	$(LEXILLA)/lexlib/WordList.h \
	$(LEXILLA)/lexlib/Accessor.cxx \
	$(LEXILLA)/lexlib/CharacterCategory.cxx \
	$(LEXILLA)/lexlib/CharacterSet.cxx \
	$(LEXILLA)/lexlib/DefaultLexer.cxx \
	$(LEXILLA)/lexlib/InList.cxx \
	$(LEXILLA)/lexlib/LexAccessor.cxx \
	$(LEXILLA)/lexlib/LexerBase.cxx \
	$(LEXILLA)/lexlib/LexerModule.cxx \
	$(LEXILLA)/lexlib/LexerNoExceptions.cxx \
	$(LEXILLA)/lexlib/LexerSimple.cxx \
	$(LEXILLA)/lexlib/PropSetSimple.cxx \
	$(LEXILLA)/lexlib/StyleContext.cxx \
	$(LEXILLA)/lexlib/WordList.cxx \
	$(LEXILLA)/src/Lexilla.cxx

liblexilla_la_SOURCES = $(SRCS)

AM_CPPFLAGS = -I$(top_srcdir)/scintilla/include -I$(LEXILLA)/include -I$(LEXILLA)/lexlib \
	@GTK_CFLAGS@ @LIBGEANY_CFLAGS@

EXTRA_DIST = License.txt README version.txt
