SCINTILLA = $(top_srcdir)/scintilla

noinst_HEADERS = \
	$(SCINTILLA)/include/ILexer.h \
	$(SCINTILLA)/include/ILoader.h

scintilla_includedir = $(includedir)/geany/scintilla/
scintilla_include_HEADERS = \
	$(SCINTILLA)/include/Scintilla.h \
	$(SCINTILLA)/include/Scintilla.iface \
	$(SCINTILLA)/include/ScintillaCall.h \
	$(SCINTILLA)/include/ScintillaMessages.h \
	$(SCINTILLA)/include/ScintillaStructures.h \
	$(SCINTILLA)/include/ScintillaTypes.h \
	$(SCINTILLA)/include/ScintillaWidget.h \
	$(SCINTILLA)/include/Sci_Position.h
